<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/shiptitle"
       android:id="@+id/title"
       android:textSize="23dp"
       android:textColor="#000000"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintRight_toRightOf="parent"/>

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="200dp"
      app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/title"
       android:layout_marginTop="10dp"
       android:id="@+id/cardview"

       >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="#9F9D9D">
      <ImageView
          android:layout_width="100dp"
          android:layout_height="match_parent"
         android:src="@drawable/ic_box"
          android:id="@+id/box"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:background="#9F9D9D"
          />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/box"
            android:text="@string/weight"
             android:id="@+id/weight"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="15dp"
            android:textSize="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/box"
             android:text="@string/wpp"
             android:id="@+id/wpp"
             app:layout_constraintTop_toBottomOf="@+id/weight"
             android:layout_marginLeft="15dp"
             android:textSize="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/box"
             android:text="@string/size"
             android:id="@+id/size"
             app:layout_constraintTop_toBottomOf="@+id/wpp"
             android:layout_margin="15dp"
             android:textSize="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/box"
             android:text="@string/spp"
             android:id="@+id/spp"
             app:layout_constraintTop_toBottomOf="@+id/size"
             android:layout_marginLeft="15dp"
             android:textSize="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/box"
             android:text="@string/processingtime"
             android:id="@+id/process"
             app:layout_constraintTop_toBottomOf="@+id/spp"
             android:layout_margin="15dp"
             android:textSize="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/box"
             android:text="@string/process"
             app:layout_constraintTop_toBottomOf="@+id/process"
             android:layout_marginLeft="15dp"
             android:textSize="15dp"/>

      </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.cardview.widget.CardView>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/cardview"
       app:layout_constraintLeft_toLeftOf="parent"
       android:id="@+id/shipaddr">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/shipaddr"
          android:id="@+id/addr"
         android:textSize="15dp"
         android:textColor="@color/black"></TextView>
      <view
          android:layout_width="match_parent"
          android:layout_height="3dp"
         app:layout_constraintTop_toBottomOf="@+id/addr"
         app:layout_constraintLeft_toLeftOf="parent"
         android:background="#000000"
          android:layout_marginRight="5dp"/>
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/arrow"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/shipaddr"
      app:layout_constraintLeft_toLeftOf="parent"
       android:id="@+id/deltimecons">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:text="@string/delivermethod"
          android:id="@+id/dmethod"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="5dp"/>
      <TextView
          android:layout_width="50dp"
          android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/dmethod"
         app:layout_constraintLeft_toLeftOf="parent"
         android:text="@string/deltime"
          android:id="@+id/dtime"
          android:textSize="12dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/dmethod"
         android:text="@string/cost"
          android:id="@+id/cost"
         app:layout_constraintLeft_toRightOf="@+id/dtime"
         app:layout_constraintRight_toLeftOf="@+id/tc"
          android:textSize="12dp"
         />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/dmethod"
          android:text="@string/tc"
          android:id="@+id/tc"
          app:layout_constraintLeft_toRightOf="@+id/cost"
          app:layout_constraintRight_toRightOf="parent"
          android:textSize="12dp"
          />
   </androidx.constraintlayout.widget.ConstraintLayout>
   <view
       android:layout_width="match_parent"
       android:layout_height="3dp"
       app:layout_constraintTop_toBottomOf="@+id/deltimecons"
       app:layout_constraintLeft_toLeftOf="parent"
       android:background="#000000"
       android:layout_marginRight="5dp"/>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/deltimecons"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="10dp"
       android:id="@+id/timecon"
       >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="@string/d1"
          android:id="@+id/d1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ks1"
          android:id="@+id/ks1"
          app:layout_constraintLeft_toRightOf="@+id/d1"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginLeft="70dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dl1"
          android:id="@+id/dl1"
          app:layout_constraintLeft_toRightOf="@+id/ks1"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginLeft="55dp"/>
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/chkradio"
          android:id="@+id/chkradio"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/d2"
          android:id="@+id/d2"
          app:layout_constraintTop_toBottomOf="@+id/d1"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginTop="5dp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ks2"
          android:id="@+id/ks2"
          app:layout_constraintLeft_toRightOf="@+id/d1"
          app:layout_constraintTop_toBottomOf="@+id/ks1"
          android:layout_marginLeft="70dp"
          android:layout_marginTop="5dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dl2"
          android:id="@+id/dl2"
          app:layout_constraintLeft_toRightOf="@+id/ks2"
          app:layout_constraintTop_toBottomOf="@+id/dl1"
          android:layout_marginLeft="40dp"
          android:layout_marginTop="5dp"/>
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/unchkradio"
          app:layout_constraintTop_toBottomOf="@+id/chkradio"
          />

   </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="270dp"
      app:layout_constraintTop_toBottomOf="@+id/timecon"
      app:layout_constraintLeft_toLeftOf="parent"
       android:background="#615F5F"
       android:layout_marginTop="10dp">

   </androidx.constraintlayout.widget.ConstraintLayout>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="#BC1B1B"
         android:text="Apply"
         android:textColor="#ffffff"
          android:layout_marginBottom="10dp"
          android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>