<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cview">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/con1"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/shoe"
                android:id="@+id/shoe"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/launch"
                android:id="@+id/launch"
                app:layout_constraintTop_toBottomOf="@+id/shoe"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/favourite"
                app:layout_constraintTop_toBottomOf="@+id/shoe"
                app:layout_constraintRight_toLeftOf="@+id/launch"
                android:layout_marginRight="15dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/con2"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/airname"
            android:id="@+id/airname"
            android:textSize="16dp"
            app:layout_constraintVertical_chainStyle="spread"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:id="@+id/from"
            app:layout_constraintTop_toBottomOf="@+id/airname"
            app:layout_constraintBottom_toTopOf="@+id/minorder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minorder"
            android:id="@+id/minorder"
            app:layout_constraintTop_toBottomOf="@+id/from"
            app:layout_constraintBottom_toTopOf="@+id/price"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/minorder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="14dp"
            android:textColor="#FD7700"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/price"
            android:text="@string/pcs"
            android:id="@+id/pcs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/price"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/price"
            android:text="@string/sold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/con3"
        app:layout_constraintTop_toBottomOf="@+id/con2"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/POption"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:src="@drawable/arrow"
            android:id="@+id/arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/option"
            app:layout_constraintRight_toLeftOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/select"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/con3"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/store"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/store"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/comment"
            android:id="@+id/comment"
            app:layout_constraintLeft_toRightOf="@+id/store"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/atc"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/atc"
            android:text="Add To Cart"
            app:layout_constraintLeft_toRightOf="@+id/comment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buy"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="BUY NOW"
            android:textColor="#ffffff"
            android:background="#FD7700"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>